--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,8 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
 
-      - name: Create DB
-        run: ./create-qrank-db
+      #      - name: Create DB
+      #        run: ./create-qrank-db
 
-      # TODO: overwrite the existing release's binary with the new file
+      - name: Publish DB
+        run: ./publish-qrank-db
