--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,8 @@ name: Publish QRank DB
 on: 
   push:
     branches: [main]
-
+  schedule:
+    - cron: "12 12 * * 0"
   pull_request: 
   workflow_dispatch:
 
